resources/sass/_components.scss
.btn-default {
  background-color: $primary;
  border: none;
  border-radius: 20px;
  padding: $space-2 $space-3;
  cursor: pointer;
  transition: transform .3s;
  &:hover {
    transform: scale(1.1);
  }
}

.overlay {
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: rgba($primary, 0.1);
  z-index: 1;
}

.nav {
  position: fixed;
  width: 100%;
  left: 0;
  top: 0;
  z-index: 2;

  &__background {
    position: absolute;
    background-color: $white;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.05);
    transform: translateY(-100px);
    z-index: 1;
    transition: transform .4s;
  }

  &--show-bg {
    .nav__background {
      transform: translateY(0);
    }
  }

  &__list {
    position: relative;
    width: 50%;
    margin-left: auto;
    display: flex;
    justify-content: center;
    padding: $space-4 0;
    z-index: 2;

    &:hover {
      pointer-events: none;

      a {
        color: $gray-60;
      }
    }
  }

  &__link {
    padding: 0 $space-4;

    &:nth-child(-n+3) {
      border-right: 1px solid $gray-100;
    }

    a {
      color: $gray-100;
      transition: color .2s;
      pointer-events: auto;

      &:hover {
        color: $gray-100;
      }
    }
  }
}


.footer {
  position: relative;
  background-color: $white;
  padding: $space-4 $space-3;
  display: flex;
  justify-content: space-between;
}


.divider {
  background-color: $primary;
  border: none;
  height: 3px;
  &--white {
    background-color: $white;
  }
}

.profiles {
  border-radius: 6px;

  &__container {
    display: flex;
    position: relative;

    &:nth-child(2) {
      left: -$space-2;
      transition-delay: .25s;
    }
    &:nth-child(3) {
      left: -$space-3;
      transition-delay: .45s;

    }
    &:nth-child(4) {
      left: -$space-4;
      transition-delay: .65s;

    }
  }

  &__card {
    box-shadow: -2px 2px 7px 2px rgba(0, 0, 0, 0.035);
    background-color: $white;
    border-radius: $radius;
    padding: $space-4 $space-6;
    transition: transform .3s;
    &:hover {
      transform: translateY(-$space-3);
    }
  }
}

.projects {
  margin-top: 64px;

  &__line {
    position: absolute;
    width: 2px;
    height: calc(100% - 132px);
    left: 50%;
    top: 196px;
    transform: translateX(-50%);
    background-color: $primary;
    z-index: 1;
  }

  &__container {
    display: flex;
    position: relative;
    margin-top: $space-6;
    z-index: 2;

    &:nth-child(odd) {
      flex-direction: row-reverse;

      .projects__title {
        left: auto;
        right: 50%;
        transform: translate(15%, -50%);
      }
    }
  }

  &__card {
    box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.035);
    background-color: $white;
    padding: $space-5;
    border-radius: $radius;
  }

  &__title {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-15%, -50%);
    background-color: $white;
    padding: $space-2;
  }
}

